--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="row">
             <button class="button-fuck">0</button>
             <button class="button-fuck">.</button>
-            <button class="button-fuck">00</button>
+            <button class="button-fuck">**</button>
             <button class="button-fuck op">-</button>
 
         </div>
